--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="header-title">
               <h1>Nguyen Phan</h1>
             </div>
-            <h2>Software Engineer - Creator - Chef</h2>
+            <h2>Software Builder - Chef</h2>
           </div>
         </div>
       </div>
@@ -123,17 +123,17 @@
       <div class="section">
         <h3>Summary</h3>
         <h4>
-          Software Enthusiast with a strong interest in learning and building
-          and best practices to become a better engineer. I enjoy solving front-
-          end problems and creating the best user experience for my users.
+          Software Enthusiast with a strong interest in learning
+          and best practices to become a rockstar engineer 🤟🏼
           <br />
           Check out my
           <a
             href="https://drive.google.com/file/d/1Zae-3kZdGdI0vMkTdXrovOR_p4FRXU6M/view?usp=sharing"
             target="_blank"
+            class="yc"
             >Resume</a
           >
-          for more skill and work exp details.
+          for more details.
         </h4>
       </div>
 
@@ -144,7 +144,7 @@
           <li>
             <h4>
               Technical Staff Intern at
-              <a href="https://viggle.ai/" target="_blank">Viggle</a>
+              <a href="https://viggle.ai/" class="loobot" target="_blank">Viggle</a>
             </h4>
             <h5>May 2025 - Aug 2025</h5>
           </li>
@@ -153,7 +153,7 @@
 
       <!-- Contact me section -->
       <div class="section">
-        <h3>How to reach me</h3>
+        <h3>Contact</h3>
         <h4>
           Feel free to reach me via
           <a
@@ -164,10 +164,10 @@
           >,
           <a
             href="https://www.instagram.com/nguyeenphann/"
-            class="Instagram"
+            class="instagram"
             target="_blank"
             >Instagram</a
-          >, or nguyeenphan.io at gmail dot com.
+          >, or nguyeenphan.io at gmail dot com
         </h4>
       </div>
 
