--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         <ul>
           <li>
             <h4>
+              Product Frontend Intern at
+              <a href="https://geekup.vn/" class="loobot" target="_blank">Geek Up</a>
+            </h4>
+            <h5>Oct 2025 - Present</h5>
+          </li>
+          <li>
+            <h4>
               Technical Staff Intern at
               <a href="https://viggle.ai/" class="loobot" target="_blank">Viggle</a>
             </h4>
