--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <li>
             <h4>
               Product Frontend Intern at
-              <a href="https://geekup.vn/" class="loobot" target="_blank">Geek Up</a>
+              <a href="https://geekup.vn/" class="geekup" target="_blank">Geek Up</a>
             </h4>
             <h5>Oct 2025 - Present</h5>
           </li>
